// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settlements should return first 10 settlements 1`] = `
Object {
  "settlements": Object {
    "__typename": "SettlementsConnection",
    "nodes": Array [
      Object {
        "__typename": "Settlement",
        "createdBlockId": "230",
        "legs": Object {
          "__typename": "LegsConnection",
          "nodes": Array [
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                "445bc6587e10fdb738384afe436aeac71f8b3b43ffa35ad732df57a75af9c631",
              ],
              "amount": "100",
              "assetId": "11ATICKER",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x0d0323fe51cc80a9666aee6103d4895be2babde33f0a58a7a7363eb53598f403",
                "number": 0,
              },
            },
          ],
        },
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "createdBlockId": "262",
        "legs": Object {
          "__typename": "LegsConnection",
          "nodes": Array [
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
              ],
              "amount": "100",
              "assetId": "11BTICKER2",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
            },
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
              ],
              "amount": "100",
              "assetId": "11BTICKER1",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                "number": 0,
              },
            },
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
              ],
              "amount": "100",
              "assetId": "11BTICKER1",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
                "number": 0,
              },
            },
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
              ],
              "amount": "100",
              "assetId": "11BTICKER1",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
                "number": 0,
              },
            },
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
              ],
              "amount": "100",
              "assetId": "11BTICKER1",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
                "number": 0,
              },
            },
          ],
        },
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "createdBlockId": "294",
        "legs": Object {
          "__typename": "LegsConnection",
          "nodes": Array [
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                "9cf9275b33172c4314f15a677f5382346ba4bf984fb86adaadf45eb3f1008442",
              ],
              "amount": "1000",
              "assetId": "12TICKER",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
                "number": 0,
              },
            },
          ],
        },
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "createdBlockId": "324",
        "legs": Object {
          "__typename": "LegsConnection",
          "nodes": Array [
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                "7e2b6c2251327adee2637729546e952c183f381712a805db885ebfdd4117b022",
              ],
              "amount": "100000000",
              "assetId": "13TICKER",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x89100903bc302c7b57438722751818bb147505d00c11b673724083de17cef001",
                "number": 0,
              },
            },
          ],
        },
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "createdBlockId": "350",
        "legs": Object {
          "__typename": "LegsConnection",
          "nodes": Array [
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "16bc52d9ae4224c6f50ea0e1c2fb1f71aa92bc686d1afa252d7c90b69e037775",
                "d2d8ff9e17bc4fb99e2f55d7828f241a80ad54d8e05dff8fccd39aeaa4d5593f",
              ],
              "amount": "100000",
              "assetId": "14TICKERRAIS",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x73169195239ea1e63d5eb7042d234f62c647d09985d6e8413e3021c9a4826af8",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x0d99491631d116d39ee41bbfeee6241bf1d9d4d243697b730768a3c05bf71183",
                "number": 0,
              },
            },
          ],
        },
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "createdBlockId": "353",
        "legs": Object {
          "__typename": "LegsConnection",
          "nodes": Array [
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "16bc52d9ae4224c6f50ea0e1c2fb1f71aa92bc686d1afa252d7c90b69e037775",
              ],
              "amount": "30000",
              "assetId": "14TICKER",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x73169195239ea1e63d5eb7042d234f62c647d09985d6e8413e3021c9a4826af8",
                "number": 0,
              },
            },
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "16bc52d9ae4224c6f50ea0e1c2fb1f71aa92bc686d1afa252d7c90b69e037775",
              ],
              "amount": "1200",
              "assetId": "14TICKERRAIS",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x73169195239ea1e63d5eb7042d234f62c647d09985d6e8413e3021c9a4826af8",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
            },
          ],
        },
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "createdBlockId": "354",
        "legs": Object {
          "__typename": "LegsConnection",
          "nodes": Array [
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d2d8ff9e17bc4fb99e2f55d7828f241a80ad54d8e05dff8fccd39aeaa4d5593f",
              ],
              "amount": "10000",
              "assetId": "14TICKER",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x0d99491631d116d39ee41bbfeee6241bf1d9d4d243697b730768a3c05bf71183",
                "number": 0,
              },
            },
            Object {
              "__typename": "Leg",
              "addresses": Array [
                "d2d8ff9e17bc4fb99e2f55d7828f241a80ad54d8e05dff8fccd39aeaa4d5593f",
              ],
              "amount": "400",
              "assetId": "14TICKERRAIS",
              "from": Object {
                "__typename": "Portfolio",
                "identityId": "0x0d99491631d116d39ee41bbfeee6241bf1d9d4d243697b730768a3c05bf71183",
                "number": 0,
              },
              "to": Object {
                "__typename": "Portfolio",
                "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                "number": 0,
              },
            },
          ],
        },
        "result": "Executed",
      },
    ],
    "totalCount": 7,
  },
}
`;

exports[`settlements should return settlements for a particular Asset 1`] = `
Object {
  "legs": Object {
    "__typename": "LegsConnection",
    "nodes": Array [
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "262",
          "id": "262/5",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER2",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "262",
          "id": "262/5",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER2",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "262",
          "id": "262/5",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER2",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "262",
          "id": "262/5",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER2",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
    ],
  },
}
`;

exports[`settlements should return settlements where a particular DID is involved 1`] = `
Object {
  "legs": Object {
    "__typename": "LegsConnection",
    "nodes": Array [
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "230",
          "id": "230/1",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "445bc6587e10fdb738384afe436aeac71f8b3b43ffa35ad732df57a75af9c631",
                ],
                "amount": "100",
                "assetId": "11ATICKER",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0d0323fe51cc80a9666aee6103d4895be2babde33f0a58a7a7363eb53598f403",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "262",
          "id": "262/5",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER2",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "262",
          "id": "262/5",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER2",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "262",
          "id": "262/5",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER2",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "262",
          "id": "262/5",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER2",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xea4516967d37fa2e8d1e63e08ed358798518caa6a5dad8c7b236fe9446061dc3",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x40b9ecbf803281095439a8f6a74613e2f221b0a01ebec6ad2f109ed2ea895fbb",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x08c278a1fda1c376118a5a018ed968b73093f43862e69fb70a43420e23dcd811",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
                  "6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
                  "fc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
                  "3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
                ],
                "amount": "100",
                "assetId": "11BTICKER1",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x5e356043d083040537b74f6d3516c045ca2f5635f2f1962e0a1ab0ce81806b60",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "294",
          "id": "294/1",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "9cf9275b33172c4314f15a677f5382346ba4bf984fb86adaadf45eb3f1008442",
                ],
                "amount": "1000",
                "assetId": "12TICKER",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0xbd8b5c568e457823d3d3f18d2d1cc1ed79a086124760e9df41a4c66e96de9b42",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "324",
          "id": "324/1",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
                  "7e2b6c2251327adee2637729546e952c183f381712a805db885ebfdd4117b022",
                ],
                "amount": "100000000",
                "assetId": "13TICKER",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x89100903bc302c7b57438722751818bb147505d00c11b673724083de17cef001",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "353",
          "id": "353/6",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "16bc52d9ae4224c6f50ea0e1c2fb1f71aa92bc686d1afa252d7c90b69e037775",
                ],
                "amount": "30000",
                "assetId": "14TICKER",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x73169195239ea1e63d5eb7042d234f62c647d09985d6e8413e3021c9a4826af8",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "16bc52d9ae4224c6f50ea0e1c2fb1f71aa92bc686d1afa252d7c90b69e037775",
                ],
                "amount": "1200",
                "assetId": "14TICKERRAIS",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x73169195239ea1e63d5eb7042d234f62c647d09985d6e8413e3021c9a4826af8",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
      Object {
        "__typename": "Leg",
        "settlement": Object {
          "__typename": "Settlement",
          "createdBlockId": "354",
          "id": "354/6",
          "legs": Object {
            "__typename": "LegsConnection",
            "nodes": Array [
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d2d8ff9e17bc4fb99e2f55d7828f241a80ad54d8e05dff8fccd39aeaa4d5593f",
                ],
                "amount": "10000",
                "assetId": "14TICKER",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0d99491631d116d39ee41bbfeee6241bf1d9d4d243697b730768a3c05bf71183",
                  "number": 0,
                },
              },
              Object {
                "__typename": "Leg",
                "addresses": Array [
                  "d2d8ff9e17bc4fb99e2f55d7828f241a80ad54d8e05dff8fccd39aeaa4d5593f",
                ],
                "amount": "400",
                "assetId": "14TICKERRAIS",
                "from": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0d99491631d116d39ee41bbfeee6241bf1d9d4d243697b730768a3c05bf71183",
                  "number": 0,
                },
                "to": Object {
                  "__typename": "Portfolio",
                  "identityId": "0x0500000000000000000000000000000000000000000000000000000000000000",
                  "number": 0,
                },
              },
            ],
          },
          "result": "Executed",
        },
      },
    ],
  },
}
`;

exports[`settlements should return the settlements with address filter 1`] = `
Object {
  "legs": Object {
    "__typename": "LegsConnection",
    "nodes": Array [],
  },
}
`;
